2016-01-07 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/: fixed aimed at consistently determining the virtual host
    associated to a thread

2016-01-05 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/mod_rivet_generator.[h|c]: files holding the output generation
    procedures on which all the bridges rely (previously stored in mod_rivet.c)
    * src/mod_rivet/rivet_lazy_mpm.c: purged of redundant locking code and unused variables
    * src/mod_rivet/worker_prefork_mpm.c: new file with thread private data extension to
    bridge status 
    * doc/xml/internals.xml: update to amend out of date explanations

2015-12-28 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_lazy_mpm.c: fixed missing interpreter scripts initialization
    * doc/xml/internals.xml: documenting bridge interpreter accessor function 

2015-12-26 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/worker_prefork_common.c: functions common to both the prefork
    and worker bridges, but not general enough bur rather specific to the worker
    model adopted by them
    * src/mod_rivet/rivet_lazy_mpm.c: further development, now capable of serving
    rivet requests, but needs to be completed.
    * src/mod_rivet/mod_rivet_common.c: more stuff moved from mod_rivet to this file
    * src/mod_rivet/mod_rivet.h: new data organization with bridge specific thread
    private data
    * src/mod_rivet/Tclwebapache.c: API changed from Tclwebreq pointers to 
    thread private data that is supposed to store most of the thread environment

2015-12-22 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_lazy_mpm.c: taking a snapshot of the current development
    as this code proved to be quite robust when stressed using 'ab'

2015-12-20 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_lazy_mpm.c: first prototype of a threaded bridge with
    reduced start up time and thread number optimization

2015-12-15 Massimo Manghi <mxmanghi@apache.org>